<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<artifactId>spring-data-web-example</artifactId>

	<name>Spring Data - Basic web example</name>

	<parent>
		<groupId>org.springframework.data.examples</groupId>
		<artifactId>spring-data-web-examples</artifactId>
		<version>2.0.0.BUILD-SNAPSHOT</version>
	</parent>


<profiles>
		<profile>
			<id>spring-data-next-releasetrain</id>
			<properties>
				<spring-data-bom.version>2021.0.0-SNAPSHOT</spring-data-bom.version>
			</properties>
		</profile>

		<profile>
			<id>spring-data-next</id>
			<properties>
				<spring-data-bom.version>2020.0.5-SNAPSHOT</spring-data-bom.version>
			</properties>
		</profile>

		<profile>
			<id>java8</id>

			<activation>
				<jdk>1.8</jdk>
			</activation>

			<modules>

				<!-- Embedded Cassandra (cassandra-all) is not compatible with Java runtime 9 and higher.
				 See https://issues.apache.org/jira/browse/CASSANDRA-9608 -->
				<module>cassandra</module>
			</modules>
		</profile>

		<profile>
			<id>java11</id>

			<activation>
				<jdk>11</jdk>
			</activation>
		</profile>

		<profile>
			<id>java-next</id>

			<activation>
				<jdk>[9,)</jdk>
			</activation>

			<dependencies>
				<dependency>
					<groupId>javax.xml.bind</groupId>
					<artifactId>jaxb-api</artifactId>
				</dependency>
				<dependency>
					<groupId>javax.annotation</groupId>
					<artifactId>javax.annotation-api</artifactId>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>java-13+</id>

			<activation>
				<jdk>[13,)</jdk>
			</activation>

			<properties>
				<jvm.enable-preview>--enable-preview</jvm.enable-preview>
			</properties>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>13</release>
							<compilerArgs>
								${jvm.enable-preview}
							</compilerArgs>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>${jvm.enable-preview}</argLine>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-failsafe-plugin</artifactId>
						<configuration>
							<argLine>${jvm.enable-preview}</argLine>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>

		<profile>
			<id>java-13</id>

			<activation>
				<jdk>13</jdk>
			</activation>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>13</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>java-14</id>

			<activation>
				<jdk>14</jdk>
			</activation>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>14</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>java-15</id>

			<activation>
				<jdk>15</jdk>
			</activation>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>15</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>java-16</id>

			<activation>
				<jdk>16</jdk>
			</activation>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>16</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>


	<pluginRepositories>
        	<pluginRepository>
       	     		<id>repository.spring.release</id>
      	      		<name>Spring GA Repository</name>
            		<url>https://repo.spring.io/plugins-release/</url>
        	</pluginRepository>
    	</pluginRepositories>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
		</dependency>

<dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-bom</artifactId>
      <version>2020.0.6</version>
      <scope>import</scope>
      <type>pom</type>
    </dependency>

	</dependencies>

</project>